# dataeng_template

./: .gitignore  .pre-commit-config.yaml  Makefile  Readme.MD  pyproject.toml
.github/workflows/: ci.yaml
src/easter_calculator/: easter.py
tests/test_easter_calculator/: test_easter.py
tests/test_example/: test_case.py
