[project]
name = "data_engineer_template_project"
version = "0.1.0"
description = ""
authors = [
    {name = "Riccardo Amadio", email = "riccardo.amadio1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "ruff (>=0.11.12,<0.12.0)",
    "coverage (>=7.8.2,<8.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)"
]
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
